# test01

./: LICENSE  README.md  TODO.md  cabal.project  hangul-quiz.cabal
.github/workflows/: ci.yml  haskell-ci.yml  haskell.yml
app/: Main.hs
src/HangulQuiz/: Data.hs  Quiz.hs
test/: Spec.hs
